# cymo

./: .editorconfig  .gitignore  .gitlab-ci.yml  .space.kts  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md
scripts/: install.sh
src/: args.rs  eudora.rs  main.rs  utils.rs
