[package]
name = "cymo"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-recursion = "1.0.5"
clap = { version = "4.4.7", features = ["derive"] }
crossbeam-channel = "0.5.8"
futures = "0.3.29"
glob = "0.3.1"
infer = { version = "0.15.0", default-features = false }
suppaftp = { version = "5.2.1", features = [
    "async",
    "async-native-tls",
    "async-secure",
] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["compat", "io"] }

[dev-dependencies]
tempfile = "3.8.1"

[profile.release]
lto = true
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
