[package]
name = "cymo"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-recursion = "1.0.5"
clap = { version = "4.4.8", features = ["derive"] }
crossbeam-channel = "0.5.8"
futures = "0.3.29"
suppaftp = { version = "5.2.2", features = [
    "async",
    "async-native-tls",
    "async-secure",
] }
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["compat", "io"] }
walkdir = "2.4.0"

[dev-dependencies]
tempfile = "3.8.1"

[profile.release]
lto = true
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
